chore: update server sources